<resources>
    <string name="app_name">Bill Please</string>
    <string name="amount">Amount</string>
    <string name="pax">Num of pax</string>
    <string name="no_svs">No SVS</string>
    <string name="svs">SVS</string>
    <string name="no_gst">No GST</string>
    <string name="gst">GST\'</string>
    <string name="discount">Discount(%)</string>
    <string name="enter_a_number">Enter a number</string>
    <string name="cash">Cash</string>
    <string name="paynow">PayNow</string>
    <string name="split">Split</string>
    <string name="reset">Reset</string>
</resources>